# VEDA_Final_Project

./: .gitignore  AllCctvWindow.cpp  CMakeLists.txt  CMakeLists.txt.pre_portable.bak  CaptureCalibOverlay.cpp  CctvOverlayWidget.cpp  CctvOverlayWidget.h  ClipGC.cpp  ClipGC.hpp  ClipPopup.cpp  ClipPopup.h  FullscreenViewer.h  GstVideoWidget.cpp  GstVideoWidget.h  HumanBoxOverlayWidget.cpp  HumanBoxOverlayWidget.h  MiniMapWidget.cpp  MqttEvent.h  MqttPublisher.cpp  MqttPublisher.h  MqttSubscriber.cpp  MqttSubscriber.h  RC_CALIB_DEBUG_CHECKLIST.md  README.md  RobotStatusWindow.cpp  RobotStatusWindow.h  SystemUsageWindow.cpp  SystemUsageWindow.h  TitleBarWidget.cpp  auto_main.cpp  broadcast_baud_test.py  broadcast_test.py  build.ninja  c_cpp_properties.json  calib_aruco_homography.cpp  calib_camera.cpp  camera.cpp  codex_torque.py  codex_wasd.py  config_template.ini  (+62 more)
SCServo_Linux/: SCS.h  SCSCL.cpp  SCSCL.h  SCSerial.h  SMSBL.cpp  SMSBL.h  SMSCL.cpp  SMS_STS.cpp  SMS_STS.h  编译说明.txt  说明.txt
backup_ui_20260303_154521/: AllCctvWindow.cpp  AllCctvWindow.h  AllCctvWindow.ui  CMakeLists.txt  CctvOverlayWidget.cpp  ClipPopup.h  GstVideoWidget.h  HomographyCalib.cpp  MiniMapWidget.h  login_dialog.cpp  login_dialog.h  login_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  video_clip.cpp  video_clip.h
calib_file/: 3d_test.cpp  RC_CALIB_DEBUG_CHECKLIST.md  calib_aruco_homography.cpp  homography_mqtt_pub.cpp  rc_goal_subscriber.cpp  rpi_aruco_tracker.cpp
cmake/: Dependencies.cmake  ProjectOptions.cmake
config/: H_img2world.yaml  camera.yaml  rc_control.ini  rc_control.template.ini
docs/: EIS_STRONG_TEST_GUIDE.md  GLOBAL_SHUTTER_TEST_GUIDE.md  HYBRID_EIS_FRAMEWORK.md  IMX296_TEST_SNIPPET.ini  TWOPIPELINE_TEST_GUIDE.md  architecture.md  build.md  import-map.md  mqtt-topics.md  vr_tilting_report.txt
grtsp/: camera_system.cpp  main.cpp
include/: app_config.hpp  app_types.hpp  auto_app.hpp  auto_controller.hpp  camera_capture.hpp  eis_capture.hpp  eis_common.hpp  eis_config.hpp  eis_globals.hpp  eis_imu.hpp  eis_input.hpp  eis_processor.hpp  frame_jpeg_cache.hpp  gpio_line.hpp  gst_camera_capture.hpp  gyro_eis.hpp  homography_publisher.hpp  http_vr_server.hpp  hybrid_eis.hpp  image_utils.hpp  imu_reader.hpp  libcamera_capture.hpp  libcamera_grabber.hpp  lk_tracker.hpp  log_utils.hpp  mqtt_drive.hpp  offset_calibrator.hpp  pose_tracker.hpp  ptz_control.hpp  rc_config.hpp  rc_control_node.hpp  rc_control_types.hpp  rc_defaults.hpp  rc_motor_driver.hpp  rc_path_planner.hpp  rc_status_publisher.h  rc_status_types.h  rtsp_server.hpp  rtsp_stream.hpp  server_app.hpp  (+9 more)
main/: station_example_main.c
map/: CMakeLists.txt  H.yaml  H_img2world.yaml  calib_aruco_homography.cpp  homography_mqtt_pub.cpp  p1_tracker.cpp  rc_goal_subscriber.cpp  rpi_aruco_tracker.cpp  use.txt
mqtt_patrol/: H_img2world.yaml  p1_tracker  p1_tracker.cpp  rc_control_node  rc_control_node.cpp  rc_control_node.h
patrol/mqtt_patrol/: CMakeLists.txt  H_img2world.yaml  aruco_yaw_reader  aruco_yaw_reader.cpp  daik  daik_tank.cpp  number_tracker.cpp  p1_tracker  p1_tracker.cpp  patrol_10_to_13_test  patrol_10_to_13_test.cpp  rc_control_node  rc_control_node.cpp  rc_control_node.h  rc_control_node_loop  rc_control_node_loop.cpp  rc_control_node_stop_at_6_5  rc_control_node_stop_at_6_5.cpp  rc_goal_subscriber.cpp  reverse_back_once  reverse_back_once.cpp  straight_x_test  test_rc  test_rc.cpp
qt/: AllCctvWindow.cpp  CMakeCache.txt  CMakeLists.txt  CaptureCalibOverlay.h  ClipPopup.h  FramelessHelper.cpp  GstVideoWidget.cpp  MqttPublisher.cpp  PoseOverlayWidget.cpp  README.md  cmake_install.cmake  login_dialog.h  login_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtcsettings.cmake  video_clip.h
qt/config/: runtime.ini.example
qt/docs/: qt_control_system_integrated_documentation.md
qt/include/: AllCctvWindow.h  CctvOverlayWidget.h  CctvZoomWindow.h  ClipPopup.h  FramelessHelper.h  GstVideoWidget.h  HomographyCalib.h  HumanBoxOverlayWidget.h  MapData.h  MiniMapWidget.h  MqttSubscriber.h  PoseOverlayWidget.h  PoseTypes.h  TitleBarWidget.h  mainwindow.h  runtime_config.hpp
qt/resources/: app_resources.qrc
qt/src/: CaptureCalibOverlay.cpp  CctvZoomWindow.cpp  ClipPopup.cpp  FullscreenViewer.cpp  RobotStatusWindow.cpp  TitleBarWidget.cpp  login_dialog.cpp  mainwindow.cpp  runtime_config.cpp  video_clip.cpp
qt/ui/: AllCctvWindow.ui
rc/: manual_drive  manual_drive.cpp  manual_drive_evdev.cpp  manual_drive_hw  manual_drive_hw.cpp  rc_control_nod  rc_control_node  rc_control_node.cpp  rc_control_node.h  rc_mqtt_test_pub.cpp  use.txt
rc_tank/: rc_control_node  rc_control_node.cpp  rc_control_node.h  use.txt
rc_test/: rc_test.py
ruview/: CMakeLists.txt  README.md  sdkconfig.old  settings.json
scservo_sdk/: port_handler.py  scservo_def.py
server/: .gitignore  CMakeLists.txt  README.md  server_main.cpp
server/config/: server.yaml.example
server/include/: server_defaults.hpp  server_types.hpp  server_utils.hpp
server/src/: homography_publisher.cpp  server_app.cpp
server/tools/: calib_aruco_homography.cpp  calib_camera.cpp
servo_camera/: CMakeLists.txt  main.cpp
servo_camera/includes/: main.h  mqtt_client.h
servo_camera/lib/: mqtt_client.cpp
src/: app_config.cpp  auto_app.cpp  auto_controller.cpp  calib_offset.cpp  camera_capture.cpp  eis_LKonly.cpp  eis_capture.cpp  eis_config.cpp  eis_globals.cpp  eis_imu.cpp  eis_input.cpp  eis_processor.cpp  frame_jpeg_cache.cpp  gpio_line.cpp  gst_camera_capture.cpp  gyro_eis.cpp  homography_publisher.cpp  http_vr_server.cpp  hybrid_eis.cpp  image_utils.cpp  imu_reader.cpp  libcamera_capture.cpp  libcamera_grabber.cpp  lk_tracker.cpp  main.cpp  main_lkonly.cpp  main_raw.cpp  move_raw.cpp  mqtt_drive.cpp  mqtt_tank_drive.cpp  offset_calibrator.cpp  pose_tracker.cpp  ptz_control.cpp  rc_config.cpp  rc_control_node.cpp  rc_motor_driver.cpp  rc_path_planner.cpp  rc_status_publisher.cpp  rc_status_publisher_main.cpp  rc_status_types.cpp  (+11 more)
tank/: CMakeLists.txt  README.md  (+1 more)
tilting_VR/server/: CMakeLists.txt
tilting_VR/server/src/: main.cpp
(+61 files in other folders)
